--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width">
   
-<script>
+<!-- <script>
   (function (window, document, tag, url, namespace) {
     element = document.createElement(tag);
     placement = document.getElementsByTagName(tag)[0];
@@ -14,7 +14,7 @@
     element.src = url;
     placement.parentNode.insertBefore(element, placement);
   })(window, document, 'script', 'https://s3-ap-southeast-1.amazonaws.com/onedirect/survey/survey_sdk/webinapp-sdk-v1.min.js', 'od')
-</script>
+</script> -->
 
 <style type="text/css">
     .npsnumber{
@@ -869,5 +869,18 @@
       </td>
     </tr>
   </table>
+  	<script>
+	window.onedirectSettings = {
+			apiKey: 'NjE4MV8xNTI4Nzk3NTcyNTE5XzE=',
+		}
+			let iframe = document.createElement('iframe');
+		iframe.id = "od-messenger-wrapper";
+		iframe.style.display = 'none';
+		document.body.appendChild(iframe);
+		let scripts = document.createElement('script');
+		scripts.src = "https://s3-ap-southeast-1.amazonaws.com/onedirect/messaging/web-sdk/staging/od-messaging.main%40v1.0.js";
+		iframe.contentWindow.document.head.appendChild(scripts);
+	
+	</script>
 </body>
 </html>
