--- a/scroll.html
+++ b/scroll.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width">
   
-<script>
+<!-- <script>
     (function (window, document, tag, url, namespace) {
     element = document.createElement(tag);
     placement = document.getElementsByTagName(tag)[0];
@@ -16,7 +16,7 @@
     placement.parentNode.insertBefore(element, placement);
   })(window, document, 'script', 'https://s3-ap-southeast-1.amazonaws.com/onedirect/survey/survey_sdk/webinapp-sdk-v1.min.js', 'od')
 </script>
-
+ -->
 	<style type="text/css">
 		.npsnumber {
 			color: #ffffff!important;
@@ -2272,6 +2272,14 @@
 			</td>
 		</tr>
 	</table>
+	<script>
+	window.onedirectSettings = {
+		apiKey: 'NjIyMV8xNTI4Nzk3NTcyNDMzXzE=',
+	}
+</script>
+<script>
+	!function (e, s, n, t, a) { el = s.createElement(n), p = s.getElementsByTagName(n)[0], el.async = 1, el.id = "onedirect-messaging-sdk", el.src = "https://s3-ap-southeast-1.amazonaws.com/onedirect/messaging/web-sdk/staging/od-messaging.init.v1.0.min.js", p.parentNode.insertBefore(el, p) }(window, document, "script");
+</script>
 </body>
 
 </html>
