--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	
 <script>
   window.onedirectSettings = {
-    apiKey: 'Nzk0N18xNTMxNzIxNDY2NjQ0X1ZJQkVS',
+    apiKey: 'xx',
   }
 </script>
 <script>
