updated for webinapp

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </script>
   
-<!-- <script>
+<script>
   (function (window, document, tag, url, namespace) {
     element = document.createElement(tag);
     placement = document.getElementsByTagName(tag)[0];
@@ -30,7 +30,7 @@
     placement.parentNode.insertBefore(element, placement);
   })(window, document, 'script', 'https://s3-ap-southeast-1.amazonaws.com/onedirect/survey/survey_sdk/staging/webinapp-sdk-v1.min.js', 'od')
 </script>
-	 -->
+	 
 
 
 	
@@ -90,9 +90,9 @@
     apiKey: 'xx',
   }
 </script>
-<script>
+<!-- <script>
   !function (e, s, n, t, a) { el = s.createElement(n), p = s.getElementsByTagName(n)[0], el.async = 1, el.id = "onedirect-messaging-sdk", el.src = "https://s3-ap-southeast-1.amazonaws.com/onedirect/messaging/web-sdk/production/od-messaging.init.v1.0.min.js", p.parentNode.insertBefore(el, p) }(window, document, "script");
-</script>
+</script> -->
 
 	
 </body>
