--- a/scroll.html
+++ b/scroll.html
@@ -17,6 +17,18 @@
   })(window, document, 'script', 'https://s3-ap-southeast-1.amazonaws.com/onedirect/survey/survey_sdk/webinapp-sdk-v1.min.js', 'od')
 </script>
  -->
+	
+	<script>
+  (function (window, document, tag, url, namespace) {
+    element = document.createElement(tag);
+    placement = document.getElementsByTagName(tag)[0];
+    element.async = 1;
+    element.id = "od-sdk";
+    element.setAttribute('data-id', 'Nzg5NF8xNTQ1MjA5NDQ2NjY2XzQ=');
+    element.src = url;
+    placement.parentNode.insertBefore(element, placement);
+  })(window, document, 'script', 'https://s3-ap-southeast-1.amazonaws.com/onedirect/survey/survey_sdk/webinapp-sdk-v1.min.js', 'od')
+</script>
 	<style type="text/css">
 		.npsnumber {
 			color: #ffffff!important;
@@ -2272,14 +2284,14 @@
 			</td>
 		</tr>
 	</table>
-	<script>
+<!-- 	<script>
 	window.onedirectSettings = {
 		apiKey: 'NjM5MF8xNTM1NDYwNzMxNjU5XzQ=',
 	}
 </script>
 <script>
 	!function (e, s, n, t, a) { el = s.createElement(n), p = s.getElementsByTagName(n)[0], el.async = 1, el.id = "onedirect-messaging-sdk", el.src = "https://s3-ap-southeast-1.amazonaws.com/onedirect/messaging/web-sdk/staging/od-messaging.init.v1.0.min.js", p.parentNode.insertBefore(el, p) }(window, document, "script");
-</script>
+</script> -->
 </body>
 
 </html>
