--- a/scroll.html
+++ b/scroll.html
@@ -29,7 +29,7 @@ Nzg5NF8xNTU0MTAzMTQxMTc3XzZiMGI2XzE=
 Nzg5NF8xNTU0MTAzMTQxMTc4X2FiM2JhXzE=
 Nzg5NF8xNTU0MTAzMTQxMTc4X2Y5OWUyXzE=
 Nzg5NF8xNTU0MTAzMTQxMTc4X2YxMTUwXzE= -->
-	<script>
+<!-- 	<script>
   (function (window, document, tag, url, namespace) {
     element = document.createElement(tag);
     placement = document.getElementsByTagName(tag)[0];
@@ -39,6 +39,14 @@ Nzg5NF8xNTU0MTAzMTQxMTc4X2YxMTUwXzE= -->
     element.src = url;
     placement.parentNode.insertBefore(element, placement);
   })(window, document, 'script', 'https://s3-ap-southeast-1.amazonaws.com/onedirect/survey/survey_sdk/webinapp-sdk-v1.min.js', 'od')
+</script> -->
+	  <script>
+ window.onedirectSettings = {
+   apiKey: 'NjMyNF8xNTU0MTE2NDY0MjM2XzQ=',
+ }
+</script>
+<script>
+ !function (e, s, n, t, a) { el = s.createElement(n), p = s.getElementsByTagName(n)[0], el.async = 1, el.id = "onedirect-messaging-sdk", el.src = "https://s3-ap-southeast-1.amazonaws.com/onedirect/messaging/web-sdk/production/od-messaging.init.v1.0.min.js", p.parentNode.insertBefore(el, p) }(window, document, "script");
 </script>
 	<style type="text/css">
 		.npsnumber {
