--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@
 <!-- <script>
   !function (e, s, n, t, a) { el = s.createElement(n), p = s.getElementsByTagName(n)[0], el.async = 1, el.id = "onedirect-messaging-sdk", el.src = "https://s3-ap-southeast-1.amazonaws.com/onedirect/messaging/web-sdk/production/od-messaging.init.v1.0.min.js", p.parentNode.insertBefore(el, p) }(window, document, "script");
 </script> -->
-
+<script>
+  window.intercomSettings = {
+    app_id: "v8jahc78"
+  };
+</script>
+<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/v8jahc78';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();</script>
 	
 </body>
 
