--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 	<div ng-view></div>
 	<a href="scroll.html">scroll</a>
 	<a href="test.html">test</a>
+	<a href="/targeting/">targeting</a>
 	
 <script>
   window.onedirectSettings = {
