--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     placement.parentNode.insertBefore(element, placement);
   })(window, document, 'script', 'https://s3-ap-southeast-1.amazonaws.com/onedirect/survey/survey_sdk/staging/webinapp-sdk-v1.min.js', 'od')
 </script> -->
-	<script>
+<!-- 	<script>
   (function (window, document, tag, url, namespace) {
     element = document.createElement(tag);
     placement = document.getElementsByTagName(tag)[0];
@@ -40,7 +40,7 @@
     element.src = url;
     placement.parentNode.insertBefore(element, placement);
   })(window, document, 'script', 'https://s3-ap-southeast-1.amazonaws.com/onedirect/survey/survey_sdk/staging/webinapp-sdk-v1.min.js', 'od')
-</script>
+</script> -->
 <!-- 	 <script>
   (function (window, document, tag, url, namespace) {
     element = document.createElement(tag);
@@ -117,14 +117,19 @@
 	<a href="test.html">test</a>
 	<a href="/targeting/">targeting</a>
 	
+  <script>
+    window.onedirectSettings = {
+      apiKey: 'NjE4MV8xNTUxOTM5MDU3MTg4X1ZJQkVS',
+    }
+  </script>
+  <script>
+      window.od = {}; var mc = function() { mc.c(arguments);}
+      mc.q = []; mc.c=function(args) { mc.q.push(args)};
+      window.od.messenger = mc;
+  </script>
 <script>
-  window.onedirectSettings = {
-    apiKey: 'xx',
-  }
+  !function (e, s, n, t, a) { el = s.createElement(n), p = s.getElementsByTagName(n)[0], el.async = 1, el.id = "onedirect-messaging-sdk", el.src = "https://s3-ap-southeast-1.amazonaws.com/onedirect/messaging/web-sdk/staging/targetting/1.9/od-messaging.init.v1.0.js", p.parentNode.insertBefore(el, p) }(window, document, "script");
 </script>
-<!-- <script>
-  !function (e, s, n, t, a) { el = s.createElement(n), p = s.getElementsByTagName(n)[0], el.async = 1, el.id = "onedirect-messaging-sdk", el.src = "https://s3-ap-southeast-1.amazonaws.com/onedirect/messaging/web-sdk/production/od-messaging.init.v1.0.min.js", p.parentNode.insertBefore(el, p) }(window, document, "script");
-</script> -->
 <!-- <script>
   window.intercomSettings = {
     app_id: "v8jahc78"
