--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
     placement.parentNode.insertBefore(element, placement);
   })(window, document, 'script', 'https://s3-ap-southeast-1.amazonaws.com/onedirect/survey/survey_sdk/staging/webinapp-sdk-v1.min.js', 'od')
 </script> -->
-<!-- 	<script>
+	<script>
   (function (window, document, tag, url, namespace) {
     element = document.createElement(tag);
     placement = document.getElementsByTagName(tag)[0];
     element.async = 1;
     element.id = "od-sdk";
-    element.setAttribute('data-id', 'NjIyMV8xNTU3OTk4Mzg4NzA1XzQ=');
+    element.setAttribute('data-id', 'NjYyMF8xNTYxNDQzNjE2OTY4XzQ=');
     element.src = url;
     placement.parentNode.insertBefore(element, placement);
   })(window, document, 'script', 'https://s3-ap-southeast-1.amazonaws.com/onedirect/survey/survey_sdk/staging/webinapp-sdk-v1.min.js', 'od')
-</script> -->
+</script>
 <!-- 	 <script>
   (function (window, document, tag, url, namespace) {
     element = document.createElement(tag);
@@ -116,7 +116,7 @@
 	<a href="scroll.html">scroll</a>
 	<a href="test.html">test</a>
 	<a href="/targeting/">targeting</a>
-	
+<!-- 	
   <script>
     window.onedirectSettings = {
       apiKey: 'Nzg4OF8xNTYxMDE3MDIyNjk1XzQ=',
@@ -129,7 +129,7 @@
   </script>
 <script>
   !function (e, s, n, t, a) { el = s.createElement(n), p = s.getElementsByTagName(n)[0], el.async = 1, el.id = "onedirect-messaging-sdk", el.src = "https://s3-ap-southeast-1.amazonaws.com/onedirect/messaging/web-sdk/staging/targetting/1.9/od-messaging.init.v1.0.js", p.parentNode.insertBefore(el, p) }(window, document, "script");
-</script>
+</script> -->
 <!-- <script>
   window.intercomSettings = {
     app_id: "v8jahc78"
