--- a/test.html
+++ b/test.html
@@ -875,6 +875,11 @@
   }
 </script>
 <script>
+		window.od = {}; var mc = function() { mc.c(arguments);}
+		mc.q = []; mc.c=function(args) { mc.q.push(args)};
+		window.od.messenger = mc;
+</script>
+<script>
   !function (e, s, n, t, a) { el = s.createElement(n), p = s.getElementsByTagName(n)[0], el.async = 1, el.id = "onedirect-messaging-sdk", el.src = "https://s3-ap-southeast-1.amazonaws.com/onedirect/messaging/web-sdk/staging/od-messaging.init.v1.0.js", p.parentNode.insertBefore(el, p) }(window, document, "script");
 </script>
 <!--   <script>
