--- a/test.html
+++ b/test.html
@@ -3,6 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width">
+
+  <script data-ad-client="ca-pub-4893010919642874" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   
 <!-- <script>
   (function (window, document, tag, url, namespace) {
