--- a/index.html
+++ b/index.html
@@ -9,20 +9,16 @@
 	<script type="text/javascript" src="lib/angular/app_revised.js"></script>
 	<script type="text/javascript" src="lib/angular/route.js"></script>
 		<script>
-		(function (window, document, tag, url, namespace) {
-			// window[namespace] = window[namespace] || function (x) {
-			// 	console.log(x);
-			// 	(window[namespace].queue = window[namespace].queue || []).push(arguments);
-			// };
-			element = document.createElement(tag);
-			placement = document.getElementsByTagName(tag)[0];
-			// element.async = 1;
-			element.id = "od-sdk";
-			element.setAttribute('data-id', 'Nzg5NF8xNTc2NjU5MjY1NDAxXzQ=');
-			element.src = url;
-			placement.parentNode.insertBefore(element, placement);
-		})(window, document, 'script', 'http://sdk.onedirectdev.in/public/sdk.min.js', 'od')
-	</script>
+			(function (window, document, tag, url, namespace) {
+    			element = document.createElement(tag);
+    			placement = document.getElementsByTagName(tag)[0];
+    			element.async = 1;
+    			element.id = "od-sdk";
+    			element.setAttribute('data-id', 'NjIyMV8xNTk3OTc4MDUwOTU0XzQ=');
+    			element.src = url;
+   			placement.parentNode.insertBefore(element, placement);
+  			})(window, document, 'script', 'https://s3-ap-southeast-1.amazonaws.com/onedirect/survey/survey_sdk/webinapp-sdk-v1.min.js', 'od')
+		</script>
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
 <style type="text/css">
 	
