--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 	<script type="text/javascript" src="lib/angular/app_revised.js"></script>
 	<script type="text/javascript" src="lib/angular/route.js"></script>
 	
-         <script>
+        <script>
             (function (window, document, tag, url, namespace) {
               element = document.createElement(tag);
               placement = document.getElementsByTagName(tag)[0];
               element.async = 1;
               element.id = "od-sdk";
-              element.setAttribute('data-id', 'Nzk5Ml8xNTk4MDEzNTcyODc0XzQ=');
+              element.setAttribute('data-id', 'Nzg5NF8xNTk4MDEzNjgyMjQxXzQ=');
+              element.setAttribute('storeId', 'Store8');
+              element.setAttribute('employeeId', 'emp5');
               element.src = url;
               placement.parentNode.insertBefore(element, placement);
             })(window, document, 'script', 'https://onedirect-production-attachments.storage.googleapis.com/feedback_survey/survey_sdk/webinapp-sdk-v1.min.js', 'od')
